# JustChat

./: README.md  pyproject.toml
src/: manage.py
src/chat/: consumers.py  routing.py  tests.py  urls.py  views.py
src/chat/templates/chat/: index.html  room.html
src/justchat/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
